--- a/.gitignore
+++ b/.gitignore
@@ -58,9 +58,9 @@ sysinfo.txt
 # Crashlytics generated file
 crashlytics-build.properties
 # don't put secret keys in the repo
-config.txt
+configVR.txt
 configAR.txt
 Assets/configAR.txt
 Assets/StreamingAssets/*
-config.txt
+Assets/configVR.txt
 .DS_Store
