--- a/Assets/Samples/XR Plugin Management/3.2.12/Example XR Management implementation/Unity.XR.Management.Samples.asmdef
+++ b/Assets/Samples/XR Plugin Management/3.2.12/Example XR Management implementation/Unity.XR.Management.Samples.asmdef
@@ -4,8 +4,7 @@
         "Unity.XR.Management.Editor",
         "Unity.XR.Management"
     ],
-    "optionalUnityReferences": [
-    ],
+    "optionalUnityReferences": [],
     "includePlatforms": [
         "Editor"
     ],
