--- a/Assets/Samples/XR Plugin Management/3.2.10/Example XR Management implementation/Unity.XR.Management.Samples.asmdef
+++ b/Assets/Samples/XR Plugin Management/3.2.10/Example XR Management implementation/Unity.XR.Management.Samples.asmdef
@@ -4,7 +4,8 @@
         "Unity.XR.Management.Editor",
         "Unity.XR.Management"
     ],
-    "optionalUnityReferences": [],
+    "optionalUnityReferences": [
+    ],
     "includePlatforms": [
         "Editor"
     ],
